force-app/main/default/objects/KPI_Rule__c/KPI_Rule__c.object-meta.xml
<CustomObject>
    <label>KPI Rule</label>
    <nameField>
        <label>KPI Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>