force-app/main/default/objects/KPI_Rule__c/fields/KPI_Code__c.field-meta.xml
<CustomField>
    <fullName>KPI_Code__c</fullName>
    <formula>KPI_Category_Management__r.KPI_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Code</label>
    <type>Text</type>
</CustomField>