force-app/main/default/objects/KPI_Rule__c/fields/Max_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Percent__c</fullName>
    <label>Max Percent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>