force-app/main/default/objects/KPI_Rule__c/fields/Percent_Service_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Percent_Service_Revenue__c</fullName>
    <label>Percent Service Revenue</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>